# tangled-browser

./: .gitignore  .gitmodules  README.md  get_versions.sh  package-lock.json  package.json  replace_in_file.template  setup_chromium.sh  setup_millix_node.sh  setup_millix_wallet_ui.sh  setup_nodejs.sh  setup_tangled.sh  setup_tangled_advertisement.sh  setup_tangled_bot.sh  tangled.iss  upgrade_tangled.sh
chromium_resources/chrome/browser/resources/new_tab_page/tangled/: BUILD.gn
chromium_resources/chrome/browser/resources/new_tab_page/tangled/css/: all.css  style.css
chromium_resources/chrome/browser/resources/new_tab_page/tangled/js/: common.js  custom.js  plugins.js
millix_node_resources/: index.js
millix_node_resources/core/config/: environment.js
millix_wallet_ui_resources/public/: index.html
millix_wallet_ui_resources/src/: environment.js
patches/chrome/: BUILD.gn.patch
patches/chrome/app/: chrome_dll.ver.patch  chrome_exe.ver.patch  chrome_exe.vsprops.patch
patches/chrome/browser/: browser_resources.grd.patch
patches/chrome/chrome_elf/: BUILD.gn.patch  chrome_elf.ver.patch  chrome_elf_arm64.def.patch  chrome_elf_x64.def.patch  chrome_elf_x86.def.patch
patches/chrome/chrome_proxy/: BUILD.gn.patch  chrome_proxy.ver.patch  chrome_proxy_main_win.cc.patch
patches/chrome/common/: channel_info_posix.cc.patch  chrome_constants.cc.patch  chrome_paths_linux.cc.patch  webui_url_constants.cc.patch  webui_url_constants.h.patch
patches/chrome/install_static/: chromium_install_modes.cc.patch
patches/components/os_crypt/: key_storage_linux.cc.patch  (+1 more)
(+81 files in other folders)
